@@ -33,3 +33,6 @@ API Key=
 
 [vndb]
 Custom Fields=origtitle,alias
+
+[entrez]
+Custom Fields=abstract
